# potatolang

./: CMakeLists.txt  README.md  appleguo  bootstrap.pt  hw  hw.pt  main.cpp  potato_test.pt  potatolang  potatolang.h  potatolangfast.h  snake  snake.pt
.cache/clangd/index/: main.cpp.D6246A5922596D07.idx  main.cpp.EF9373029013338A.idx
potatos/: appleguo.pt  pio.pt  potato_file.pt  potato_ui.pt
testfiles/: hw.pt  snake.pt  test_file_io.pt
tomato/: editor.pt  highlighter.pt  main.cpp  potatolang.potato  syntax_loader.pt  tomato  tomato.pt  utils.pt
